--- a/ui/pantry-ui/src/app/app.component.html
+++ b/ui/pantry-ui/src/app/app.component.html
@@ -4,6 +4,13 @@
   </button>
   <mat-icon *ngIf="isSocketConnected$ | async" class="small-icon ms-2" title="Connected to Backend"
     style="font-size: 1.2rem; height: 1.2rem; width: 1.2rem; opacity: 0.7;">cloud_done</mat-icon>
+
+  <mat-icon *ngIf="amIClaiming" class="small-icon ms-2 text-green-500" title="Scanner Claimed by You"
+    style="font-size: 1.2rem; height: 1.2rem; width: 1.2rem;">qr_code_scanner</mat-icon>
+
+  <mat-icon *ngIf="isKioskMode && scannerClaimedBy && !amIClaiming" class="small-icon ms-2 text-red-500"
+    title="Scanner Claimed by Another Device"
+    style="font-size: 1.2rem; height: 1.2rem; width: 1.2rem;">qr_code_scanner</mat-icon>
   <a [routerLink]="['/']">{{title}}</a>
   <span class="example-spacer"></span>
   <a mat-icon-button [routerLink]="['/barcode/scanner']">
