pbx settings link

--- a/ui/pantry-ui/src/app/settings/settings.component.html
+++ b/ui/pantry-ui/src/app/settings/settings.component.html
@@ -121,6 +121,12 @@
             </div>
         </mat-tab>
 
+        <mat-tab label="PBX">
+            <div class="tab-content">
+                <app-pbx-settings></app-pbx-settings>
+            </div>
+        </mat-tab>
+
         <mat-tab label="Weather">
             <div class="tab-content">
                 <app-weather-settings></app-weather-settings>
