--- a/ui/pantry-ui/src/app/side-menu/side-menu.component.html
+++ b/ui/pantry-ui/src/app/side-menu/side-menu.component.html
@@ -20,5 +20,6 @@
     <a mat-list-item [routerLink]="['/settings/tags']" (click)="onLinkClick()">Tag Editor</a>
     <a mat-list-item [routerLink]="['/settings/locations']" (click)="onLinkClick()">Locations</a>
     <a mat-list-item [routerLink]="['/diagnostics']" (click)="onLinkClick()">Diagnostics</a>
+    <a mat-list-item [routerLink]="['/timers']" (click)="onLinkClick()">Timers</a>
     <a mat-list-item [routerLink]="['/settings']" (click)="onLinkClick()">Settings</a>
 </mat-nav-list>
