--- a/ui/pantry-ui/src/app/components/stock-add-dialog/stock-add-dialog.component.html
+++ b/ui/pantry-ui/src/app/components/stock-add-dialog/stock-add-dialog.component.html
@@ -10,10 +10,16 @@
         </div>
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-6">
                 <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Quantity</mat-label>
                     <input matInput type="number" [(ngModel)]="stockItem.quantity" required min="0.01">
+                </mat-form-field>
+            </div>
+            <div class="col-6">
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Unit</mat-label>
+                    <input matInput type="text" [(ngModel)]="stockItem.unit" placeholder="e.g. grams, lbs, count">
                 </mat-form-field>
             </div>
         </div>
